// Vitest Snapshot v1

exports[`basic 1`] = `
"import _564a1578 from \\"./locales/en.json\\";
import _564a1606 from \\"./locales/ja.json\\";
export const localeCodes = [\\"en\\",\\"ja\\",\\"fr\\"]

export const localeMessages = {
  \\"en\\": () => Promise.resolve(_564a1578),
  \\"ja\\": () => Promise.resolve(_564a1606),
}

export const resolveNuxtI18nOptions = async (context) => {
  const nuxtI18nOptions = Object({})
  nuxtI18nOptions.defaultLocale = \\"en\\"
  const vueI18nOptionsLoader = async (context) => Object({\\"locale\\":\\"en\\",\\"fallbackLocale\\":\\"en\\",\\"messages\\":Object({\\"en\\":Object({\\"hello\\":\\"Hello!\\"})})})
  nuxtI18nOptions.vueI18n = await vueI18nOptionsLoader(context)
  return nuxtI18nOptions
}

export const nuxtI18nOptionsDefault = Object({vueI18n: undefined,locales: [],defaultLocale: \\"\\",defaultDirection: \\"ltr\\",routesNameSeparator: \\"___\\",trailingSlash: false,defaultLocaleRouteNameSuffix: \\"default\\",strategy: \\"prefix_except_default\\",lazy: false,langDir: null,detectBrowserLanguage: Object({\\"alwaysRedirect\\":false,\\"cookieCrossOrigin\\":false,\\"cookieDomain\\":null,\\"cookieKey\\":\\"i18n_redirected\\",\\"cookieSecure\\":false,\\"fallbackLocale\\":\\"\\",\\"redirectOn\\":\\"root\\",\\"useCookie\\":true}),baseUrl: \\"\\",pages: Object({}),onBeforeLanguageSwitch: (() => ({})),onLanguageSwitched: (() => null)})

export const nuxtI18nInternalOptions = Object({__normalizedLocales: [Object({\\"code\\":\\"en\\"})]})
"
`;

exports[`lazy 1`] = `
"import _564a1578 from \\"./locales/en.json\\";
export const localeCodes = [\\"en\\",\\"ja\\",\\"fr\\"]

export const localeMessages = {
  \\"en\\": () => Promise.resolve(_564a1578),
  \\"ja\\": () => import(\\"./locales/ja.json\\" /* webpackChunkName: \\"lang-ja\\" */),
}

export const resolveNuxtI18nOptions = async (context) => {
  const nuxtI18nOptions = Object({})
  nuxtI18nOptions.defaultLocale = \\"en\\"
  const vueI18nOptionsLoader = async (context) => Object({\\"locale\\":\\"en\\",\\"fallbackLocale\\":\\"en\\",\\"messages\\":Object({\\"en\\":Object({\\"hello\\":\\"Hello!\\"})})})
  nuxtI18nOptions.vueI18n = await vueI18nOptionsLoader(context)
  return nuxtI18nOptions
}

export const nuxtI18nInternalOptions = Object({__normalizedLocales: [Object({\\"code\\":\\"en\\"})]})
"
`;

exports[`vueI18n: path 1`] = `
"import _564a1578 from \\"./locales/en.json\\";
import _564a1606 from \\"./locales/ja.json\\";
export const localeCodes = [\\"en\\",\\"ja\\",\\"fr\\"]

export const localeMessages = {
  \\"en\\": () => Promise.resolve(_564a1578),
  \\"ja\\": () => Promise.resolve(_564a1606),
}

export const resolveNuxtI18nOptions = async (context) => {
  const nuxtI18nOptions = Object({})
  const vueI18nOptionsLoader = async (context) => import(\\"~/plugins/vue-i18n.js\\").then(r => (r.default || r)(context))
  nuxtI18nOptions.vueI18n = await vueI18nOptionsLoader(context)
  return nuxtI18nOptions
}

export const nuxtI18nInternalOptions = Object({__normalizedLocales: [Object({\\"code\\":\\"en\\"})]})
"
`;
